update swagger response models
